package biblioteca.domain.enums;

public enum LoanState {
    ACTIVE,
    RETURNED,
    OVERDUE
}
