package biblioteca.domain.enums;

public enum NotificationChannel {
    CONSOLE
}
