package biblioteca.domain.enums;

public enum ReservationState {
    ACTIVE,
    CANCELLED,
    FULFILLED
}
